--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,15 @@
       <version>1.8</version>
     </dependency>
 
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--      <artifactId>jackson-databind</artifactId>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.fasterxml.jackson.datatype</groupId>-->
+<!--      <artifactId>jackson-datatype-jsr310</artifactId>-->
+<!--    </dependency>-->
+
 <!--    JASYPT With Spring Boot-->
     <dependency>
       <groupId>com.github.ulisesbocchio</groupId>
