--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,31 @@ server.port=9100
 # Spring Datasource (PostgreSQL)server.port=9100
 # ==============================
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/kyc_db
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.auto-commit=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/kyc_db
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+
+
+# ===============================
+# PRIMARY DATABASE (PostgreSQL)
+# ===============================
+spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/auth_db
+spring.datasource.primary.username=postgres
+spring.datasource.primary.password=123456
+spring.datasource.primary.driver-class-name=org.postgresql.Driver
+
+
+# ===============================
+# SECONDARY DATABASE (MySQL)
+# ===============================
+spring.datasource.secondary.jdbc-url=jdbc:postgresql://localhost:5432/kyc_db
+spring.datasource.secondary.username=postgres
+spring.datasource.secondary.password=123456
+spring.datasource.secondary.driver-class-name=org.postgresql.Driver
 
 
 # ==============================
