DB config renamed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,27 +11,29 @@ server.port=9100
 #spring.datasource.username=postgres
 #spring.datasource.password=123456
 #spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
 
 # ===============================
-# PRIMARY DATABASE (PostgreSQL)
+# AUTH_DB DATABASE (PostgreSQL)
 # ===============================
-spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/auth_db
-spring.datasource.primary.username=postgres
-spring.datasource.primary.password=123456
-spring.datasource.primary.driver-class-name=org.postgresql.Driver
+spring.datasource.auth.jdbc-url=jdbc:postgresql://localhost:5432/auth_db
+spring.datasource.auth.username=postgres
+spring.datasource.auth.password=123456
+spring.datasource.auth.driver-class-name=org.postgresql.Driver
 
 
 # ===============================
-# SECONDARY DATABASE (MySQL)
+# KYC_DB DATABASE (PostgreSQL)
 # ===============================
-spring.datasource.secondary.jdbc-url=jdbc:postgresql://localhost:5432/kyc_db
-spring.datasource.secondary.username=postgres
-spring.datasource.secondary.password=123456
-spring.datasource.secondary.driver-class-name=org.postgresql.Driver
+spring.datasource.kyc.jdbc-url=jdbc:postgresql://localhost:5432/kyc_db
+spring.datasource.kyc.username=postgres
+spring.datasource.kyc.password=123456
+spring.datasource.kyc.driver-class-name=org.postgresql.Driver
 
 
 # ==============================
