gis search added with gis DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,16 @@ spring.datasource.kyc.password=123456
 spring.datasource.kyc.driver-class-name=org.postgresql.Driver
 
 
+
+# ===============================
+# KYC_DB DATABASE (PostgreSQL)
+# ===============================
+spring.datasource.gis.jdbc-url=jdbc:postgresql://localhost:5432/teamxgis
+spring.datasource.gis.username=postgres
+spring.datasource.gis.password=123456
+spring.datasource.gis.driver-class-name=org.postgresql.Driver
+
+
 # ==============================
 # JWT Settings (Optional)
 # ==============================
