--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
       <version>3.0.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
